--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,16 +5,19 @@ find_package(ICU COMPONENTS data uc)
 if(ICU_FOUND)
   add_library(string_funcs MODULE icu_extras.c stripaccents.c egc_str_funcs.c
     more_str_funcs.c)
-  set_target_properties(string_funcs PROPERTIES C_STANDARD 99)
+  set_target_properties(string_funcs PROPERTIES C_STANDARD 99
+    C_STANDARD_REQUIRED ON)
   target_compile_options(string_funcs PRIVATE -Wall -Wextra)
   target_include_directories(string_funcs PRIVATE ${ICU_INCLUDE_DIRS})
   target_link_libraries(string_funcs ${ICU_LIBRARIES})
 endif()
 
 add_library(math_funcs MODULE math_funcs.c)
-set_target_properties(math_funcs PROPERTIES C_STANDARD 99)
+set_target_properties(math_funcs PROPERTIES C_STANDARD 99
+  C_STANDARD_REQUIRED ON)
 target_compile_options(math_funcs PRIVATE -Wall -Wextra)
 
 add_library(nss_tables MODULE nss_tables.c passwd.c group.c)
-set_target_properties(nss_tables PROPERTIES C_STANDARD 99)
+set_target_properties(nss_tables PROPERTIES C_STANDARD 99
+  C_STANDARD_REQUIRED ON)
 target_compile_options(nss_tables PRIVATE -Wall -Wextra)
