Add a bunch of math functions.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,4 +3,4 @@
 all: string_funcs.html math_funcs.html nss_tables.html
 
 %.html:  %.md
-	pandoc -f markdown -t html5 -s --toc --toc-depth=2 -o $@ $<
+	pandoc -f markdown -t html5 --mathjax -s --toc --toc-depth=2 -o $@ $<
