Remove reference to nss tables from docs/Makefile

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all
 
-all: string_funcs.html math_funcs.html nss_tables.html bloom_filter1.html \
+all: string_funcs.html math_funcs.html bloom_filter1.html \
 	blob_funcs.html pcre2_funcs.html json_funcs.html
 
 %.html:  %.md
