Better cmake support for finding pcre2 headers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,11 @@
+# -*- cmake -*-
 cmake_minimum_required(VERSION 3.5)
 project("Useful Sqlite3 Extensions" LANGUAGES C VERSION 0.3)
 
-include(FindPackageHandleStandardArgs)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+
+include(CheckSymbolExists)
+
 set(CMAKE_THREAD_PREFER_PTHREAD 1)
 find_package(Threads)
 find_package(ZLIB)
@@ -17,7 +21,8 @@ if(ICU_FOUND)
   set_target_properties(string_funcs PROPERTIES C_STANDARD 99
     C_STANDARD_REQUIRED ON)
   target_compile_options(string_funcs PRIVATE -Wall -Wextra)
-  target_include_directories(string_funcs PRIVATE ${ICU_INCLUDE_DIRS} ${PROJECT_BINARY_DIR})
+  target_include_directories(string_funcs PRIVATE ${ICU_INCLUDE_DIRS}
+    ${PROJECT_BINARY_DIR})
   target_link_libraries(string_funcs ${ICU_LIBRARIES})
 endif()
 
@@ -27,27 +32,26 @@ if(OpenSSL_FOUND)
   set_target_properties(blob_funcs PROPERTIES C_STANDARD 99
     C_STANDARD_REQUIRED ON)
   target_compile_options(blob_funcs PRIVATE -Wall -Wextra)  
-  target_include_directories(blob_funcs PRIVATE OpenSSL::Crypto ZLIB::ZLIB ${PROJECT_BINARY_DIR})
+  target_include_directories(blob_funcs PRIVATE OpenSSL::Crypto ZLIB::ZLIB
+    ${PROJECT_BINARY_DIR})
   target_link_libraries(blob_funcs OpenSSL::Crypto ZLIB::ZLIB Threads::Threads)
 endif()
 
-find_library(PCRE2_8 pcre2-8 DOC "UTF-8 version of PCRE2")
-find_library(PCRE2_16 pcre2-16 DOC "UTF-16 version of PCRE2")
-find_package_handle_standard_args(Pcre2_8 REQUIRED_VARS PCRE2_8)
-find_package_handle_standard_args(Pcre2_16 REQUIRED_VARS PCRE2_16)
+find_package(PCRE2)
 if(Pcre2_8_FOUND OR Pcre2_8_FOUND)
   add_library(pcre2_funcs MODULE pcre2_funcs.c)
-  set_target_properties(blob_funcs PROPERTIES C_STANDARD 99
+  set_target_properties(pcre2_funcs PROPERTIES C_STANDARD 99
     C_STANDARD_REQUIRED ON)
   if(Pcre2_8_FOUND)
     set(HAVE_PCRE2_8 1)
     target_link_libraries(pcre2_funcs ${PCRE2_8})
   endif()
   if(Pcre2_16_FOUND)
-    set(HAVE_PCRE2_16 1)
+    set(HAVE_PCRE1_16 1)
     target_link_libraries(pcre2_funcs ${PCRE2_16})
   endif()
-  target_include_directories(pcre2_funcs PRIVATE "${PROJECT_BINARY_DIR}")
+  target_include_directories(pcre2_funcs PRIVATE ${PCRE2_INCLUDE_DIR}
+    ${PROJECT_BINARY_DIR})
 endif()
 
 check_symbol_exists(regcomp "regex.h" HAVE_REGCOMP)
@@ -66,7 +70,8 @@ target_compile_options(math_funcs PRIVATE -Wall -Wextra)
 add_library(bloom_filter1 MODULE bloom_filter.c)
 set_target_properties(bloom_filter1 PROPERTIES C_STANDARD 99
   C_STANDARD_REQUIRED ON)
-target_compile_options(bloom_filter1 PRIVATE -Wall -Wextra -Wno-implicit-fallthrough)
+target_compile_options(bloom_filter1 PRIVATE -Wall -Wextra
+  -Wno-implicit-fallthrough)
 
 add_library(json_funcs MODULE json_funcs.c cJSON.c)
 set_target_properties(json_funcs PROPERTIES C_STANDARD 99
